--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<!doctype html>
 <html lang="en">
   <head>
-    <title>gửii Thùyyy <3</title>
+    <title>gửii Thùyyy</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -30,7 +30,7 @@
           <h2>Cậu thích tớ có phải không nào ._.</h2>
         </header>
         <button id="yes" type="button" class="btn btn-danger btn-lg">Thích ơi là thíchhh <333 </button>
-        <button id="no" type="button" class="btn btn-info btn-lg"> Không thích cậu đâu nhé >> mơ đi -_- </button>
+        <button id="no" type="button" class="btn btn-info btn-lg"> Không thích cậu đâu nhé..mơ đi -_- </button>
       </div>
     </div>
     <audio src="./sound/sound.mp3" autoplay></audio>
