--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       <div class="content">
         <header>
           <h2>Cậu thích tớ có phải không nào ._.</h2>
+          <h4>Tớ đợi để hỏi câu này cũng lâu rồi đây </h4>
         </header>
         <button id="yes" type="button" class="btn btn-danger btn-lg">Thích ơi là thíchhh <333 </button>
         <button id="no" type="button" class="btn btn-info btn-lg"> Không thích cậu đâu nhé..mơ đi -_- </button>
